force-app/main/default/objects/Lead/fields/How_Many_Bedroomspicklist__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Bedroomspicklist__c</fullName>
    <label>How Many Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>