force-app/main/default/objects/Lead/fields/How_much_you_would_like_to_invest__c.field-meta.xml
<CustomField>
    <fullName>How_much_you_would_like_to_invest__c</fullName>
    <label>How much you would like to invest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>