force-app/main/default/objects/Lead/fields/Inactive_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Lead_Owner__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Lead Owner</label>
    <type>Checkbox</type>
</CustomField>