force-app/main/default/objects/Lead/fields/INITIAL_FEEDBACK__c.field-meta.xml
<CustomField>
    <fullName>INITIAL_FEEDBACK__c</fullName>
    <label>INITIAL FEEDBACK((Post Visit or Call)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>