force-app/main/default/objects/Lead/fields/Is_Auto_Calling__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Calling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Calling</label>
    <type>Checkbox</type>
</CustomField>