force-app/main/default/objects/Lead/fields/Is_Churn_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Churn_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Churn Lead</label>
    <type>Checkbox</type>
</CustomField>