force-app/main/default/objects/Lead/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>