force-app/main/default/objects/Lead/fields/is_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>is_Opportunity__c</fullName>
    <formula>IF(OR(Last_Call_Attempt_Status__c == &apos;Visit Proposed&apos;,
Last_Call_Attempt_Status__c == &apos;Visit Confirmed&apos;,
Last_Call_Attempt_Status__c == &apos;Meeting Fixed&apos;,
Last_Call_Attempt_Status__c == &apos;Home Presentation&apos;,
Last_Call_Attempt_Status__c == &apos;Office Presentation&apos;,
Last_Call_Attempt_Status__c == &apos;Tele-Meeting Fixed&apos;)
, &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Opportunity</label>
    <type>Text</type>
</CustomField>