force-app/main/default/objects/Lead/fields/is_serviced__c.field-meta.xml
<CustomField>
    <fullName>is_serviced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Serviced</label>
    <type>Checkbox</type>
</CustomField>