force-app/main/default/objects/Lead/fields/Is_ValidPhone__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidPhone</label>
    <type>Checkbox</type>
</CustomField>