force-app/main/default/objects/Lead/fields/IsFirstPresalesCall__c.field-meta.xml
<CustomField>
    <fullName>IsFirstPresalesCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFirstPresalesCall</label>
    <type>Checkbox</type>
</CustomField>