force-app/main/default/objects/Lead/fields/ISP__c.field-meta.xml
<CustomField>
    <fullName>ISP__c</fullName>
    <label>ISP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>