force-app/main/default/objects/Lead/fields/IsReenquire__c.field-meta.xml
<CustomField>
    <fullName>IsReenquire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reenquire</label>
    <type>Checkbox</type>
</CustomField>