force-app/main/default/objects/Lead/fields/Language_On_Convert__c.field-meta.xml
<CustomField>
    <fullName>Language_On_Convert__c</fullName>
    <label>Language On Convert</label>
    <length>50</length>
    <type>Text</type>
</CustomField>