force-app/main/default/objects/Lead/fields/Last_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Status__c</fullName>
    <label>Last Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contact - Follow-up</fullName>
            </value>
            <value>
                <fullName>Sobha Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp - Contacted</fullName>
            </value>
            <value>
                <fullName>Email - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Mobile - Contacted</fullName>
            </value>
            <value>
                <fullName>Official Landline - Contacted</fullName>
            </value>
            <value>
                <fullName>WhatsApp Not Available</fullName>
            </value>
            <value>
                <fullName>Actioned</fullName>
                <isActive>false</isActive>
                <label>Actioned</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <isActive>false</isActive>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Number</label>
            </value>
            <value>
                <fullName>Junk Lead</fullName>
                <isActive>false</isActive>
                <label>Junk Lead</label>
            </value>
            <value>
                <fullName>No Contact</fullName>
                <isActive>false</isActive>
                <label>No Contact</label>
            </value>
            <value>
                <fullName>Not Actioned</fullName>
                <isActive>false</isActive>
                <label>Not Actioned</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>Tele-Meeting Fixed</fullName>
                <isActive>false</isActive>
                <label>Tele-Meeting Fixed</label>
            </value>
            <value>
                <fullName>Visit Proposed</fullName>
                <isActive>false</isActive>
                <label>Visit Proposed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>