force-app/main/default/objects/Lead/fields/Last_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt_Status__c</fullName>
    <defaultValue>&quot;Not Actioned&quot;</defaultValue>
    <label>Presales Last Call Attempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>