force-app/main/default/objects/Lead/fields/Last_Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempted_By__c</fullName>
    <label>Presales Last Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>