force-app/main/default/objects/Lead/fields/Last_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Description__c</fullName>
    <label>Presales Last Call Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>