force-app/main/default/objects/Lead/fields/Last_Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Rating__c</fullName>
    <label>Last Call Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>