force-app/main/default/objects/Lead/fields/Last_Processing_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Processing_DateTime__c</fullName>
    <label>Last Processing DateTime</label>
    <type>DateTime</type>
</CustomField>