force-app/main/default/objects/Lead/fields/Lead_Assignment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_DateTime__c</fullName>
    <label>Lead Assignment DateTime</label>
    <type>DateTime</type>
</CustomField>