force-app/main/default/objects/Lead/fields/Lead_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Time__c</fullName>
    <formula>Lead_Creation_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>