force-app/main/default/objects/Lead/fields/Lead_Creation_Hour__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Hour__c</fullName>
    <formula>VALUE( MID( TEXT( Date_and_Time_of_Unserviced_Lead__c + 0.1666 ), 12, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>