force-app/main/default/objects/Lead/fields/Lead_Escalation_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Escalation_Time_2__c</fullName>
    <formula>IF( 
AND(Lead_Creation_Hour__c &gt;=9 , Lead_Creation_Hour__c &lt; 17, ISPICKVAL(LeadSource, &quot;Digital&quot;)), 
Date_and_Time_of_Unserviced_Lead__c - 0.02764, 
IF(AND(Lead_Creation_Hour__c &gt;= 9, Lead_Creation_Hour__c &lt; 17, NOT(ISPICKVAL(LeadSource, &quot;Digital&quot;))), 
Date_and_Time_of_Unserviced_Lead__c - 0.02073, 
IF(AND(Lead_Creation_Hour__c &gt;= 17, Lead_Creation_Hour__c &lt;= 24), 
datetimevalue(DATEVALUE(Date_and_Time_of_Unserviced_Lead__c)+1) + 13/48, 
datetimevalue(DATEVALUE(Date_and_Time_of_Unserviced_Lead__c)+0) + 13/48)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Escalation Time 2</label>
    <type>DateTime</type>
</CustomField>