force-app/main/default/objects/Lead/fields/Lead_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Response__c</fullName>
    <formula>First_Call_Attempt_Date__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead First Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>