force-app/main/default/objects/Lead/fields/LEAD_ID_18_DIGIT__c.field-meta.xml
<CustomField>
    <fullName>LEAD_ID_18_DIGIT__c</fullName>
    <formula>CASEsafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEAD ID 18 DIGIT</label>
    <type>Text</type>
</CustomField>