force-app/main/default/objects/Lead/fields/Lead_Idle_Days_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Idle_Days_Number__c</fullName>
    <formula>IF(AND(ISBLANK(Last_Call_Attempt_Date__c), ISBLANK(Sales_Call_Attempt_Date__c)), now() - CreatedDate,  
			IF(Last_Call_Attempt_Date__c &gt; Sales_Call_Attempt_Date__c, now() - Last_Call_Attempt_Date__c,
					IF(Sales_Call_Attempt_Date__c &gt; Last_Call_Attempt_Date__c, now() - Sales_Call_Attempt_Date__c, 
								IF(AND(ISBLANK(Last_Call_Attempt_Date__c), NOT(ISBLANK(Sales_Call_Attempt_Date__c))), now() - Sales_Call_Attempt_Date__c,
								IF(AND(NOT(ISBLANK(Last_Call_Attempt_Date__c)), ISBLANK(Sales_Call_Attempt_Date__c)), now() - Last_Call_Attempt_Date__c,			
								0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Idle Days Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>