force-app/main/default/objects/Lead/fields/Lead_Last_Response__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Response__c</fullName>
    <formula>TEXT(
    FLOOR((Last_Call_Attempt_Date__c -  Date_and_Time_of_Unserviced_Lead__c)/24)) &amp; &quot; Days: &quot; &amp;
TEXT(
    MOD(
        FLOOR(
            Last_Call_Attempt_Date__c -  Date_and_Time_of_Unserviced_Lead__c
        ), 24
    )
) &amp; &quot; Hrs: &quot; &amp; 
TEXT(
    ROUND(
        MOD(Last_Call_Attempt_Date__c -  Date_and_Time_of_Unserviced_Lead__c,1) * 60
        , 0
    )
) &amp; &quot; Mins&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Last Response</label>
    <type>Text</type>
</CustomField>