force-app/main/default/objects/Lead/fields/Lead_Score_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Text__c</fullName>
    <label>Lead Score (Basis Project)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>