force-app/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>inbound-emailer</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
                <label>print</label>
            </value>
            <value>
                <fullName>Television</fullName>
                <label>television</label>
            </value>
            <value>
                <fullName>Outdoor</fullName>
                <label>outdoor</label>
            </value>
            <value>
                <fullName>Radio</fullName>
                <label>radio</label>
            </value>
            <value>
                <fullName>Events</fullName>
                <label>events</label>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
                <label>exhibitions</label>
            </value>
            <value>
                <fullName>Cityscape</fullName>
                <label>cityscape</label>
            </value>
            <value>
                <fullName>Tollfree</fullName>
                <label>tollfree</label>
            </value>
            <value>
                <fullName>Facebook LeadGen</fullName>
                <label>facebook leadGen</label>
            </value>
            <value>
                <fullName>Cairo_07FEB2019_Tarek</fullName>
                <label>cairo_07FEB2019_tarek</label>
            </value>
            <value>
                <fullName>Lagos_12Jan2019_Anil</fullName>
                <label>lagos_12Jan2019_Anil</label>
            </value>
            <value>
                <fullName>Affiliate-araby-ads</fullName>
                <label>affiliate-araby-ads</label>
            </value>
            <value>
                <fullName>Direct-website</fullName>
                <label>direct-website</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>email</label>
            </value>
            <value>
                <fullName>Google-display</fullName>
                <label>google-display</label>
            </value>
            <value>
                <fullName>Google-search</fullName>
                <label>google-search</label>
            </value>
            <value>
                <fullName>Portal-bayut</fullName>
                <label>portal-bayut</label>
            </value>
            <value>
                <fullName>Portal-dubizzle</fullName>
                <label>portal-dubizzle</label>
            </value>
            <value>
                <fullName>Portal-propertyfinder</fullName>
                <label>portal-propertyfinder</label>
            </value>
            <value>
                <fullName>Publisher-etiquettels</fullName>
                <label>publisher-etiquettels</label>
            </value>
            <value>
                <fullName>Publisher-linkedin</fullName>
                <label>publisher-linkedin</label>
            </value>
            <value>
                <fullName>Publisher-nabd</fullName>
                <label>publisher-nabd</label>
            </value>
            <value>
                <fullName>Publisher-oath</fullName>
                <label>publisher-oath</label>
            </value>
            <value>
                <fullName>Publisher-skynews</fullName>
                <label>publisher-skynews</label>
            </value>
            <value>
                <fullName>Publisher-taboola</fullName>
                <label>publisher-taboola</label>
            </value>
            <value>
                <fullName>Publisher-times-of-india</fullName>
                <label>publisher-times-of-india</label>
            </value>
            <value>
                <fullName>SMS</fullName>
                <label>sms</label>
            </value>
            <value>
                <fullName>Social-facebook</fullName>
                <label>social-facebook</label>
            </value>
            <value>
                <fullName>Social-facebook-messenger</fullName>
                <label>social-facebook-messenger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>