force-app/main/default/objects/Lead/fields/Leadgen_Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Leadgen_Form_ID__c</fullName>
    <label>Leadgen Form ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>