force-app/main/default/objects/Lead/fields/Leadgen_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Leadgen_Page_ID__c</fullName>
    <label>Leadgen Page ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>