force-app/main/default/objects/Lead/fields/LeadId_HashValue__c.field-meta.xml
<CustomField>
    <fullName>LeadId_HashValue__c</fullName>
    <label>LeadId HashValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>