force-app/main/default/objects/Lead/fields/Legacy_LED_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LED_Id__c</fullName>
    <label>Legacy LED Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>