force-app/main/default/objects/Lead/fields/Length_of_Names__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Names__c</fullName>
    <formula>LEN( FirstName ) +  LEN(  LastName ) + LEN(  MiddleName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Names</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>