force-app/main/default/objects/Lead/fields/Magicbricks_City__c.field-meta.xml
<CustomField>
    <fullName>Magicbricks_City__c</fullName>
    <label>Magicbricks City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>