force-app/main/default/objects/Lead/fields/Masked_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Masked_Mobile__c</fullName>
    <formula>IF(MobilePhone != &apos;&apos;, TEXT(RDS_Country_Code__c) +&apos; &apos;+&apos;xxxxxxxx&apos;+RIGHT(MobilePhone, 2), TEXT(RDS_Country_Code__c) +&apos; &apos;+&apos;xxxxxxxx&apos;+RIGHT(MobilePhone, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>