force-app/main/default/objects/Lead/fields/Matchtype__c.field-meta.xml
<CustomField>
    <fullName>Matchtype__c</fullName>
    <label>Match Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>