force-app/main/default/objects/Lead/fields/Meta_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Lead_ID__c</fullName>
    <label>Meta Lead ID</label>
    <type>TextArea</type>
</CustomField>