force-app/main/default/objects/Lead/fields/Mobile_Phone_hashValue__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_hashValue__c</fullName>
    <label>MobilePhone HashValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>