force-app/main/default/objects/Lead/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>if(CreatedBy.Profile.Name == &apos;Integration User&apos; , &apos;Digital&apos; , if(CreatedBy.Profile.Name == &apos;System Administrator&apos; , &apos;Upload&apos;, &apos;Telephony&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode</label>
    <type>Text</type>
</CustomField>