force-app/main/default/objects/Lead/fields/Nationality_HashValue__c.field-meta.xml
<CustomField>
    <fullName>Nationality_HashValue__c</fullName>
    <label>Nationality HashValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>