force-app/main/default/objects/Lead/fields/NATIONALITY_ON_CONVERT__c.field-meta.xml
<CustomField>
    <fullName>NATIONALITY_ON_CONVERT__c</fullName>
    <label>NATIONALITY ON CONVERT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>